<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DictionaryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/dictionary_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/dictionary_toolbar_layout"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/dictionary_header_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/dictionary_app_name"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/large_text" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/dictionary_thumbsup_view"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/icon_thumb_up_white"
        android:focusable="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/dictionary_appbar_layout"
        app:layout_constraintEnd_toStartOf="@id/dictionary_thumbsdown_view"
        app:layout_constraintTop_toTopOf="@id/dictionary_appbar_layout" />

    <TextView
        android:id="@+id/dictionary_thumbsdown_view"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/icon_thumb_down_white"
        android:drawablePadding="5dp"
        android:focusable="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/dictionary_appbar_layout"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dictionary_appbar_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTerm"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_4dp"
        android:layout_marginRight="@dimen/margin_4dp"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/TextInputLayoutStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dictionary_thumbsdown_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dictionary_search_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_search"
            android:imeOptions="actionDone"
            android:inputType="textFilter"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/dictionary_progressbar_view"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dictionary_no_word_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/words_not_found"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dictionary_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilTerm" />

</androidx.constraintlayout.widget.ConstraintLayout>